# Scoring_service

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
app/: config.py  main.py
app/routers/: metrics.py  router.py
app/schemas/: scoring.py
dashboards/: api-service.json
